cabal-version:      2.4
name:               BorealisTech
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             FunkyCosmonaut
maintainer:         FunkyCosmonaut@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable BorealisTech
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.1.0,
                        sdl2,
                        text

    hs-source-dirs:   app/src , app/render
    other-modules:    Math , Window
    default-language: Haskell2010
